🎮 웹 콘솔 실행 문제 수정 및 개선
- app.js 파일 빌드 프로세스에 포함
- System6502 클래스를 window 객체에 노출
- 웹 브라우저에서 에뮬레이터 초기화 로직 개선
- HTML에서 불필요한 app-real.js 참조 제거
- build.js의 file.size 속성 접근 오류 수정

이제 브라우저에서 http://localhost:8888로 접속하여 BASIC 콘솔 사용 가능

--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,6 @@
     </div>
 
     <script type="module" src="main.js"></script>
-    <script type="module" src="app-real.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
